# outlines-core

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  Makefile  README.md  RELEASE.md  environment.yml  index.html  justfile  objects.inv  pyproject.toml  setup.cfg  setup.py
.cargo/: config.toml
.github/scripts/: build_sdist_and_wheel.sh
.github/workflows/: asv_benchmark_pr.yml  outlines_core_python_ci.yml  python_ci.yml  release_pypi.yaml  release_rust.yaml  tests.yml
api/: index.html
api/guide/: index.html
api/json_schema/: index.html
api/models/: index.html
api/parsing/: index.html
api/prompts/: index.html
api/regex/: index.html
api/samplers/: index.html
benchmarks/: asv.conf.json  bench_json_schema.py  bench_numba_compile.py  bench_regex_guide.py  common.py
bindings/python/: Cargo.toml  Manifest.in  pyproject.toml  setup.cfg
bindings/python/benchmarks/: asv.conf.json  bench_json_schema.py
bindings/python/outlines_core/: __init__.py
bindings/python/outlines_core/fsm/: fsm.py  guide.py  json_schema.py  regex.py  types.py
bindings/python/outlines_core/models/: __init__.py  tokenizer.py  transformers.py
bindings/python/rust/: lib.rs
bindings/python/src/: lib.rs  regex.rs
bindings/python/src/outlines_core/: __init__.py
bindings/python/src/outlines_core/integrations/: utils.py
bindings/python/tests/fsm/: test_fsm.py  test_json_schema.py  test_regex.py
blog/: index.html
blog/2024/01/10/roadmap-for-2024/: index.html
blog/archive/2024/: index.html
blog/category/roadmap/: index.html
community/: index.html
community/contribute/: index.html
community/examples/: index.html
community/feedback/: index.html
community/versioning/: index.html
cookbook/: index.html
cookbook/chain_of_density/: index.html
cookbook/chain_of_thought/: index.html
cookbook/classification/: index.html
cookbook/dating_profiles/: index.html
cookbook/deploy-using-bentoml/: index.html
cookbook/deploy-using-cerebrium/: index.html
cookbook/deploy-using-modal/: index.html
cookbook/extraction/: index.html
cookbook/knowledge_graph_extraction/: index.html
cookbook/models_playing_chess/: index.html
cookbook/qa-with-citations/: index.html
cookbook/react_agent/: index.html
cookbook/simtom/: index.html
cookbook/structured_generation_workflow/: index.html
installation/: index.html
licence/: index.html
outlines/: __init__.py
outlines-core/: Cargo.toml
outlines-core/src/: lib.rs  regex.rs
outlines/fsm/: guide.py
outlines/generate/: cfg.py  choice.py  format.py  fsm.py  json.py  regex.py  text.py
outlines/models/: __init__.py  transformers.py
python/outlines_core/: __init__.py
python/outlines_core/fsm/: fsm.py  guide.py  json_schema.py  outlines_core_rs.pyi  regex.py
python/outlines_core/models/: __init__.py  tokenizer.py  transformers.py
quickstart/: index.html
reference/: index.html
reference/functions/: index.html
reference/generation/cfg/: index.html
reference/generation/choices/: index.html
reference/generation/custom_fsm_ops/: index.html
reference/generation/format/: index.html
reference/generation/generation/: index.html
reference/generation/json/: index.html
reference/generation/regex/: index.html
reference/generation/structured_generation_explanation/: index.html
reference/generation/types/: index.html
reference/models/exllamav2/: index.html
reference/models/llamacpp/: index.html
reference/models/mlxlm/: index.html
reference/models/models/: index.html
reference/models/openai/: index.html
reference/models/tgi/: index.html
reference/models/transformers/: index.html
reference/models/transformers_vision/: index.html
reference/models/vllm/: index.html
reference/prompting/: index.html
reference/samplers/: index.html
reference/serve/vllm/: index.html
reference/text/: index.html
search/: search_index.json
src/: error.rs  index.rs  lib.rs  locator.rs  prelude.rs  primitives.rs  regex.rs  vocabulary.rs
src/interegular/: fsm.rs  mod.rs  patterns.rs  simple_parser.rs
src/json_schema/: helpers.rs  mod.rs  parsing.rs  types.rs
src/outlines_core/: __init__.py  caching.py
src/outlines_core/fsm/: guide.py  regex.py
src/outlines_core/models/: transformers.py
src/python_bindings/: mod.rs
src/vocabulary/: locator.rs  mod.rs  processor.rs
tests/: test_cache.py
tests/fsm/: test_fsm.py  test_guide.py  test_json_schema.py  test_regex.py  test_statistical.py  test_types.py
tests/generate/: test_generate.py
tests/integration/: test_pickle.py
tests/interegular/: test_parse_outline_patterns.py  test_parse_pattern.py  test_parse_pattern_to_fsm.py
tests/models/: test_tokenizer.py  test_transformers.py
welcome/: index.html
