[package]
name = "outlines-core"
version = "0.1.0"
edition = "2021"
description = "Structured Generation"
license = "Apache-2.0"
repository = "https://github.com/dottxt-ai/outlines-core"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0"
pyo3 = { version = "0.22.0", features = ["extension-module"], optional = true }
regex = "1.10.6"
serde-pyobject = "0.4.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = {version = "1", features = ["derive"]}
hf-hub = "=0.3.2"
tokenizers = { version = "=0.20.0", features = ["http"] }

[features]
python-bindings = ["pyo3"]

[lib]
name = "outlines_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[package.metadata.scripts]
build-python-extension = "python setup.py build_rust --inplace --debug"
build-python-extension-release = "python setup.py build_rust --inplace --release"
