[package]
name = "_outlines_core_rs"
version = "0.1.0-dev.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_outlines_core_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
outlines-core = { path = "../../outlines-core" }